--- a/style.css
+++ b/style.css
@@ -142,7 +142,6 @@ section > p{
     margin: 125px 0 0 0;
     text-align: left;
 
-
 }
 
 footer{
@@ -154,6 +153,8 @@ footer{
     text-align: center;
     font-size: 1.5em;
 }
+
+
 
 @media only screen and (max-width: 1000px) {
     header{
@@ -184,4 +185,41 @@ footer{
         flex-direction: column;
         align-items: center;
     }
+}
+
+.slideshow{
+    max-width: 1000px;
+    position: relative;
+}
+
+.mySlides{
+    display: none;
+    max-width: 400px;
+    margin: 50px 10px 20px 290px;    
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: #333;
+    font-weight: bold;
+    font-size: 40px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+.next{
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.left{
+    left: 0;
+    border-radius: 3px 0 0 3px;
+
+
 }
