--- a/style.css
+++ b/style.css
@@ -7,13 +7,40 @@
     margin: 0;
     padding: 0;
 }
-
+body{
+    background-color: rgba(126, 132, 150, 0.863);
+}
 .container{
     background-color: rgb(25, 114, 119);
     margin: auto;
     max-width: 90%;
     width: 1000px;
 }
+
+
+.myMenuItems{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    min-width: 160px;
+}
+
+.myMenuItems a{
+    float: none;
+    padding: 8px 16px;
+    color: rgb(250,250,210);
+    font-size: 30px;
+    display: block;
+    text-decoration: none;
+    text-align: center;
+}
+
+.dropButton{
+    display: none;
+}
+
+
 
 header, main, footer{
     margin: 0 auto;
@@ -25,12 +52,13 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items:center;
-    padding: 5.5em 0 0 0;
+    padding: 4em 0 0 0;
+    margin: 5em 0 0 0 ;
 }
 
 h1{
     color: rgb(255,255,255);
-    font-size: 70px;
+    font-size: 60px;
 }
 
 span{
@@ -60,28 +88,31 @@ ul a{
 }
 
 ul a:hover{
-    color: #999;
+    color:  #333;
 }
 
-nav{
+.navbar{
     display: flex;
     justify-content: center;
     background: rgb(83, 3, 83);
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
+    overflow: hidden;
+    padding: 1.5em;
 }
 
-nav a{
-    padding: 0.5em;
-    text-decoration: none;
-    color: rgb(250,250,210);
+.navbar a{
+    display: flex;
+    justify-content: center;
+    align-items: space-around;
+    float: center;
     font-size: 30px;
-}
+    text-align: center;
+    text-decoration: none;
+    padding: 0.5em 0 0.5em 3em;
 
-nav a:hover{
-    background: rgb(133, 43, 133);
 }
 
 header img{
@@ -90,19 +121,26 @@ header img{
     padding: 30px;
 }
 
+.home {
+    color: rgba(216, 216, 216, 0.5);
+    text-decoration: underline;
+    font-size: 20px;
+    margin: 1em;
+    padding: 20px;
+}
+
+
 h3 {
     color: #fff;
     font-size: 30px;
 }
 
 #aboutMe{
-    padding: 4.8em 2.5em 0.5em 2.5em;
+    padding: 2em 2.5em 0.5em 2.5em;
 }
 
 section > p{
     margin: 0.5em 2em 1em 2em;
-    
-
 }
 #aboutMe p, #projects p{
     font-size: 1.4em;
@@ -110,51 +148,40 @@ section > p{
 }
 
 #myProjects{
-    padding: 4.8em 3em 2.5em 2.5em;
+    padding: 2em 3em 2.5em 2.5em;
 }
 
 #projects{
     display: grid;
     grid-template-columns: 1fr 1fr;
     text-align: center; 
-    grid-gap: 0.5em;
-}
-
-#projects article img {
-    max-width: 95%;
-    width: 450px;
-    height: 400px;
-    border: 1px solid #333;
+    grid-gap: 1em;
+    margin: 3em 0.5em 2em 0.5em;
 }
 
 #projects h3{
     padding: 0.5em;
+    margin: 2em 0 0 0;
 }
 
 #projects p{
     display: grid;
-    padding: 0.5em 1em;
-    grid-template-rows: 400px;
+    padding: 0.5em;
+    grid-template-rows: 550px;
     text-align: left;
+    margin: 0 0 0 0.5em;
 }
 
-#review p{
-    margin: 125px 0 0 0;
-    text-align: left;
-
-}
 
 footer{
     margin-top: 0.5em;
     margin-bottom: 1em;
     background-color: rgb(83, 3, 83);
     color: rgb(250,250,210);
-    padding: 0.5 em 0;
+    padding: 0.5em;
     text-align: center;
     font-size: 1.5em;
 }
-
-
 
 @media only screen and (max-width: 1000px) {
     header{
@@ -163,12 +190,17 @@ footer{
         justify-content: center;
         align-items: center;
     }
+    .navbar{
+        padding: 0.5em;
+    }
+
     nav{
         display: flex;
         margin: 0;
         flex-direction: column;
         justify-content: center;
         align-items:center;
+        overflow: hidden;
     }
     #aboutMe{
         display: flex;
@@ -185,17 +217,110 @@ footer{
         flex-direction: column;
         align-items: center;
     }
+
+    
+    .dropdown{
+        display:flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items:center;
+        overflow: hidden; 
+        background-color:  rgb(83, 3, 83);   
+    }
+
+    .dropButton{
+        display:flex;
+        justify-content: center;
+        align-items:center;
+        background-color: rgb(83, 3, 83);
+    }
+
+    .dropdown, .dropButton{
+        cursor: pointer;
+        font-size: 35px;
+        border: none;
+        outline: none;
+        color: rgb(250,250,210);
+        padding: 5px;
+        margin: 5px; 
+        background-color: rgb(83, 3, 83);
+
+    }
+
+    .navbar a:hover{
+        
+        background-color: #888
+    }
+
+
+    .dropdown:hover{
+        background-color: rgb(83, 3, 83);
+    }
+
+    .dropButton:hover{
+        background-color:  rgba(126, 132, 150, 0.863);
+    }
+    .myMenuItems{
+        display: none;
+        position: relative;
+        min-width: 160px;
+        z-index: 1;
+    }
+
+    .myMenuItems a{
+        float: none;
+        padding: 8px 16px;
+        color: rgb(250,250,210);
+        font-size: 30px;
+        display: block;
+        text-decoration: none;
+        text-align: center;
+    }
+
+    .myMenuItems a:hover{
+        background-color:  rgba(126, 132, 150, 0.863);
+    }
+
+    .show{
+        display: block;
+    }
+
+    .buttons{
+        position: center;
+    }
+
+    .collapsible{
+        margin: 0.5em;
+        min-width: 400px;
+        padding: 0.5em;
+        
+
+    }
 }
 
 .slideshow{
     max-width: 1000px;
+    max-height: 400px;
     position: relative;
+    z-index: initial;
+    padding: 2em;
+    
 }
 
 .mySlides{
     display: none;
-    max-width: 400px;
-    margin: 50px 10px 20px 290px;    
+    max-width: 600px;
+    margin: auto;
+    width: relative;    
+}
+
+.mySlides img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 400px;
+    border: double rgb(255, 255, 210);
+    padding: 0.5em;
 }
 
 .prev, .next {
@@ -205,9 +330,9 @@ footer{
     width: auto;
     margin-top: -22px;
     padding: 16px;
-    color: #333;
+    color: rgb(255, 255, 210);
     font-weight: bold;
-    font-size: 40px;
+    font-size: 60px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
@@ -217,9 +342,95 @@ footer{
     border-radius: 3px 0 0 3px;
 }
 
-.left{
+.prev{
     left: 0;
     border-radius: 3px 0 0 3px;
+}
 
 
+.text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(255, 255, 210);
+    font-size: 30px;
+    padding: 10px;
+    position: relative;
+}
+
+#slides{
+    max-width: 1000px;
+    max-height: 400px;
+    position: relative;
+    z-index: 1;
+} 
+
+
+.collapsible{
+    background-color: rgb(83, 3, 83);
+    color: rgb(250,250,210);
+    cursor: pointer;
+    padding: 20px;
+    width: 90%;
+    border: double rgb(250,250,210);
+    text-align: center;
+    outline: none;
+    font-size: 30px;
+}
+
+.active, .collapsible:hover{
+    background-color: #333;
+}
+
+.projectContent{
+    padding: 0 18px;
+    overflow: hidden;
+    display: none;
+    background-color: rgb(25, 114, 119);
+    border: double rgb(255, 255, 210);
+}
+
+.modal{
+    display: none;
+    position: relative;
+    left: 0;
+    top: 0;
+    height: auto;
+    overflow: auto;
+    background-color: rgb(25, 114, 119);
+    padding: 0;
+}
+
+.modal-content {
+    background-color: #333;
+    margin: 0.5em 2em 3em 3em;
+    padding: 20px;
+    border: double rgb(255, 255, 210);
+    width: 90%;
+}
+
+.close{
+    color: rgb(255, 255, 210);
+    float: right;
+    font-size: 38px;
+    font-weight: bold;
+    margin: 0;
+    
+}
+
+.close:hover, close:focus{
+    color: #222;
+    text-decoration: none;
+    cursor: pointer;
+}
+.buttons{
+    color: rgb(250,250,210);
+    width: 300px;
+    background-color: rgb(83, 3, 83);
+    font-size: 30px;
+    outline: rgb(83, 3, 83);
+    border: double;
+    border-color:rgb(255, 255, 210);
+    margin: 2em 0 2em 3.5em;
+    cursor: pointer;
 }
